# alchemy

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/examples/: apple_silicon_gguf.yaml  chemistry_qa.yaml  code_generation.yaml  instruction_tuning.yaml
crates/: README.md
src/alchemy/: __init__.py  exceptions.py
src/alchemy/agents/: base.py  generator.py  planner.py  schema_planner.py  validator.py
src/alchemy/cli/: app.py
src/alchemy/config/: loader.py  settings.py
src/alchemy/outputs/: base.py  code_output.py  hf_dataset.py  hf_postprocess.py  json_output.py
src/alchemy/pipeline/: artifacts.py  context.py  datasets.py  engine.py  plan.py  plans.py
src/alchemy/prompts/: generator_prompts.py  planner_prompts.py  validator_prompts.py
src/alchemy/quality/: __init__.py  dedupe.py  json_schema.py  (+1 more)
tests/: conftest.py
tests/test_agents/: test_generator.py  test_planner.py  test_schema_planner.py  test_validator.py
tests/test_cli/: test_app.py
tests/test_config/: test_loader.py  test_settings.py
tests/test_models/: test_base.py  test_registry.py
tests/test_outputs/: test_code_output.py  test_hf_dataset.py  test_hf_postprocess.py  test_json_output.py
tests/test_pipeline/: test_artifacts.py  test_engine.py  test_plan.py
tests/test_quality/: __init__.py  test_dedupe.py  test_json_schema.py  test_language_constraints.py
tests/test_recipes/: __init__.py  test_text_compression.py
tests/test_schemas/: test_dynamic.py
tests/test_spec/: __init__.py  test_plan.py
tests/test_utils/: test_json_parsing.py
(+8 files in other folders)
