[project]
name = "alchemy"
version = "0.1.0"
description = "Synthetic data generation agent harness"
readme = "README.md"
authors = [
    { name = "Akshay Gautam", email = "akshaygautam010@gmail.com" }
]
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "mlx-lm>=0.20",
    "openai>=1.50",
    "google-generativeai>=0.8",
    "datasets>=3.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.11",
]

[project.scripts]
alchemy = "alchemy.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alchemy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=alchemy --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
